--- a/.env
+++ b/.env
@@ -4,11 +4,19 @@ JWT_SECRET=your_jwt_secret_key
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
 JWT_EXPIRY=1h
 JWT_REFRESH_EXPIRY=7d
-OTP_EXPIRY=300000
+OTP_EXPIRY=600000
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 LINKEDIN_CLIENT_ID=your_linkedin_client_id
 LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
-BACKEND_URL=http://localhost:5000 
+BACKEND_URL=http://localhost:5000
+
+# Email configuration
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your_email@example.com
+EMAIL_PASSWORD=your_email_password
+EMAIL_FROM=noreply@your-domain.com 
