--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "nodemailer": "^6.10.0"
   }
-} 
+}
