--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
+  "name": "authentication-api",
+  "version": "1.0.0",
+  "description": "A secure authentication API with JWT, OTP, and social login",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-secrets": "node scripts/generate-secrets.js",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "prepare-deploy": "npm run generate-secrets && npm run docker:build"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "mongoose": "^7.5.0",
+    "jsonwebtoken": "^9.0.1",
+    "bcryptjs": "^2.4.3",
+    "express-validator": "^7.0.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
@@ -13,5 +31,26 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "twilio": "^5.5.2"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/authentication-api.git"
+  },
+  "keywords": [
+    "authentication",
+    "jwt",
+    "oauth",
+    "otp",
+    "express",
+    "nodejs",
+    "mongodb"
+  ],
+  "author": "",
+  "license": "MIT"
 }
